--- a/css/main.less
+++ b/css/main.less
@@ -1,90 +1,75 @@
-        html {
-            height: 100%;
-        }
-        
-        body {
-            height: 100%;
-            line-height: 1;
-            font-family: "微软雅黑";
-            background-color: #fff;
-            font-size: 12px;
-            color: #5d5b5b;
-            min-width: 320px;
-            margin: 0 auto;
-            display: block;
-            position: relative;
-            overflow-y: hidden;
-        }
-        
-        .flex-body {
-            position: absolute;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: -webkit-flex;
-            display: flex;
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: vertical;
-            -ms-flex-direction: column;
-            flex-direction: column;
-            -webkit-flex-direction: column;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-        
-        .flex-main {
-            position: relative;
-            height: 100%;
-            width: 100%;
-            -webkit-box-flex: 1;
-            -ms-flex: 1;
-            -webkit-flex: 1;
-            flex: 1;
-            overflow: hidden;
-        }
-        
-        .speakBottom {
-            position: absolute;
-            z-index: 4;
-            width: 100%;
-            bottom: -1px;
-            box-shadow: 0 0 4px #ccc;
-            height: 60px;
-            flex-shrink: 0;
-            background: blue;
-        }
-        
-        .wrap {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            overflow-y: scroll;
-            background: green;
-            -webkit-overflow-scrolling: touch;
-            position: absolute;
-        }
-        
-        .wrap {
-            height: 100%;
-        }
-        
-        .wrap li {
-            height: 100px;
-            border-bottom: 1px solid black;
-        }
-        
-        .box {
-            position: absolute;
-            bottom: 60px;
-            width: 100%;
-        }
-        
-        .box input {
-            margin: 0 auto;
-            width: 90%;
-            height: 30px;
-        }
-        
-        .cmtbox-wrapper-transform {
-            transform: translate3d(0, 0, 0);
-        }
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    line-height: 1;
+    font-family: "微软雅黑";
+    background-color: #fff;
+    font-size: 12px;
+    color: #5d5b5b;
+    min-width: 320px;
+    margin: 0 auto;
+    display: block;
+    position: relative;
+    overflow-y: hidden;
+}
+
+.flex-body {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: vertical;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.flex-main {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    overflow: hidden;
+}
+
+.speakBottom {
+    position: absolute;
+    z-index: 4;
+    width: 100%;
+    bottom: -1px;
+    box-shadow: 0 0 4px #ccc;
+    height: 60px;
+    flex-shrink: 0;
+    background: blue;
+
+    input {
+        margin: 0 auto;
+        width: 100%;
+        height: 60px;
+    }
+}
+
+.wrap {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    overflow-y: scroll;
+    background: green;
+    -webkit-overflow-scrolling: touch;
+    position: absolute;
+    li {
+        height: 100px;
+        border-bottom: 1px solid black;
+    }
+}
